--- a/src/app/site-header/site-header.component.html
+++ b/src/app/site-header/site-header.component.html
@@ -7,8 +7,21 @@
       <a routerLink="/cart" routerLinkActive="active">Cart</a>
     </div>
   </div>
-  <div class="right">
-    <a href="">Sign In</a>
+  <div class="right" *ngIf="!user">
+    <a routerLink="sign-in">Sign In</a>
     <a href="" class="cta">Register</a>
+  </div>
+
+  <div class="right" *ngIf="user">
+    <div>
+      <img
+        src="/assets/images/profile.png"
+        (click)="toggleSignOutMenu()"
+        alt="profile"
+      />
+      <div class="sign-out" *ngIf="showSignOutMeny">
+        <button (click)="signOut()">Sign Out</button>
+      </div>
+    </div>
   </div>
 </div>
